<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/dashboard" />
        <item
                android:title="Options">

                <menu>
                        <item
                            android:id="@+id/nav_products"
                            android:icon="@drawable/ic_menu_gallery"
                            android:title="@string/products" />
                        <item
                            android:id="@+id/nav_cat"
                            android:icon="@drawable/ic_menu_slideshow"
                            android:title="@string/categories" />
                        <item
                            android:id="@+id/nav_all_orders"
                            android:icon="@drawable/ic_menu_slideshow"
                            android:title="@string/all_orders" />
                </menu>

        </item>

        <item android:title="Info">
                <menu>
                        <item
                            android:id="@+id/nav_feedbacks"
                            android:icon="@drawable/ic_menu_slideshow"
                            android:title="@string/feedbacks" />
                        <item
                            android:id="@+id/nav_help"
                            android:icon="@drawable/ic_menu_slideshow"
                            android:title="@string/help_and_feedback" />

                        <item
                            android:id="@+id/nav_notifies"
                            android:icon="@drawable/ic_menu_slideshow"
                            android:title="Notifications" />
                </menu>
        </item>

        <item android:title="Setup">
                <menu>
                        <item
                            android:id="@+id/nav_settings"
                            android:icon="@drawable/ic_menu_slideshow"
                            android:title="Settings" />
                </menu>
        </item>


</menu>