<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home_buyer"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/home_txt"/>
    <item
        android:title="Options">

        <menu>
            <item
                android:id="@+id/nav_cart_buyer"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/cart_txt" />
            <item
                android:id="@+id/nav_my_orders_buyer"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/my_orders_txt" />
        </menu>

    </item>

    <item android:title="Info">
        <menu>
            <item
                android:id="@+id/nav_help_buyer"
                android:icon="@drawable/ic_baseline_help_outline_24"
                android:title="@string/help_and_feedback" />
        </menu>
    </item>

    <item android:title="Setup">
        <menu>
            <item
                android:id="@+id/nav_settings_buyer"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="Settings" />
        </menu>
    </item>


</menu>