<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="32dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_shop_to_your_home"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_shop_pop_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView53" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton7"
        android:layout_width="250dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:layout_marginTop="16dp"
        app:iconGravity="textStart"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/scan"
        android:textStyle="bold"
        app:iconTint="@color/white"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/or"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton7" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/feedbackbg"
        android:hint="@string/shop_id"
        android:paddingHorizontal="20dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView57" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddShopFirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/add"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>