<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".SellerRegistration">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:src="@drawable/benmart_logo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/new_seller"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/register_your_shop_store_is_important_to_start_selling"
        android:textColor="@color/black_vary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/etCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/company_name"
            android:paddingHorizontal="30dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:inputType="text"
            android:layout_marginHorizontal="30dp"
            android:textColorHint="@color/black_vary"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/etCompanyDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/company_description"
            android:paddingHorizontal="30dp"
            android:paddingVertical="12dp"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/black"
            android:layout_marginHorizontal="30dp"
            android:textColorHint="@color/black_vary"
            app:layout_constraintTop_toBottomOf="@+id/etCompanyName"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/your_full_name"
            android:paddingHorizontal="30dp"
            android:singleLine="true"
            android:inputType="text"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="30dp"
            android:textColorHint="@color/black_vary"
            app:layout_constraintTop_toBottomOf="@+id/etCompanyDescription"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email_id"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="30dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="30dp"
            android:textColorHint="@color/black_vary"
            app:layout_constraintTop_toBottomOf="@+id/etFullName"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/mobile"
            android:paddingHorizontal="30dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:inputType="phone"
            android:layout_marginHorizontal="30dp"
            android:textColorHint="@color/black_vary"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password"
            android:paddingHorizontal="30dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginHorizontal="30dp"
            android:textColorHint="@color/black_vary"
            app:layout_constraintTop_toBottomOf="@+id/etPhone"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/etRePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/re_password"
            android:paddingHorizontal="30dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginHorizontal="30dp"
            android:textColorHint="@color/black_vary"
            app:layout_constraintTop_toBottomOf="@+id/etPass"
            tools:layout_editor_absoluteX="30dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/blue"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:text="@string/next"
        android:onClick="btnNext1"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="50dp"
        android:textSize="16sp"
        android:letterSpacing="0"
        app:layout_constraintTop_toBottomOf="@+id/etRePass" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>